--- a/Front/css/style.css
+++ b/Front/css/style.css
@@ -172,3 +172,32 @@ input[type="text"], input[type="url"], input[type="number"], input[type="passwor
 .menu-links a:hover {
     text-decoration: underline;
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    width: 80%;
+    max-width: 600px;
+}
+.close {
+    float: right;
+    font-size: 20px;
+    cursor: pointer;
+}
+.error {
+    color: red;
+    font-size: 12px;
+}
